--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,4 +29,4 @@ jobs:
     - run: npm ci
     - run: npm install cypress
     - run: npm run build --if-present
-    - run: npx cypress run --spec "cypress/e2e/tests/*"
+    - run: npx cypress run
