--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,6 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm install cypress
+    - run: npm install unique-username-generator --save2C%22totalTimeSpent%22%3A%2220724%22%7D&isIframe=false&m=%7B%22description%22
     - run: npm run build --if-present
     - run: npx cypress run
