--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,8 +16,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        node-version: [16.x]
+  
 
     steps:
     - uses: actions/checkout@v3
@@ -28,6 +28,5 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm install cypress
-    - run: npm install unique-username-generator --save2C%22totalTimeSpent%22%3A%2220724%22%7D&isIframe=false&m=%7B%22description%22
     - run: npm run build --if-present
     - run: npx cypress run
