--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [18.x]
   
 
     steps:
@@ -29,4 +29,4 @@ jobs:
     - run: npm ci
     - run: npm install cypress
     - run: npm run build --if-present
-    - run: npx cypress run --browser chrome
+    - run: npx cypress run
