--- a/reporter-config.json
+++ b/reporter-config.json
@@ -2,7 +2,7 @@
     "reporterEnabled": "mochawesome",
     "mochawesomeReporterOptions": {
         "reportDir": "cypress/results/json",
-        "overwrite": true,
+        "overwrite": false,
         "html": false,
         "json": true
     }
