--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,5 +1,7 @@
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Create Cypress report
+name: Node.js CI
 
 on:
   push:
@@ -11,30 +13,21 @@ jobs:
   build:
 
     runs-on: macos-latest
-      
+
+    strategy:
+      matrix:
+        node-version: [18.x]
+  
+
     steps:
-      - name: Install a project with a clean slate
-        run: |
-          npm ci
-          $(npm bin)/cypress cache path
-          $(npm bin)/cypress cache list
-          $(npm bin)/cypress verify
-      - name: Run Cypress tests
-        run: npm run test:chrome
-        continue-on-error: true
-      - name: Copy test execution videos
-        run: |
-          mkdir docs
-          cp -r cypress/videos docs/videos
-      - name: Merge test results into one
-        run: npm run report:merge
-      - name: Generate HTML report
-        run: npm run report:generate
-      - name: Deploy report page
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
-          user_name: 'github-actions[bot]'
-          user_email: 'github-actions[bot]@users.noreply.github.com'
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm ci
+    - run: npm install cypress
+    - run: npm run build --if-present
+    - run: npx cypress run
 
