--- a/.github/workflows/create-report.yml
+++ b/.github/workflows/create-report.yml
@@ -13,12 +13,10 @@ jobs:
     runs-on: macos-latest
       
     steps:
-      - name: Install a project with a clean slate
+      - name: Install a project with 
         run: |
           npm ci
-          $(npm bin)/cypress cache path
-          $(npm bin)/cypress cache list
-          $(npm bin)/cypress verify
+          npm install cypress
       - name: Run Cypress tests
         run: npm run test:chrome
         continue-on-error: true
