--- a/.github/workflows/create-report.yml
+++ b/.github/workflows/create-report.yml
@@ -18,7 +18,7 @@ jobs:
           npm install cypress
           npm run build --if-present
       - name: Run Cypress tests
-        run: npm run test:chrome
+        run: npx cypress run
         continue-on-error: true
       - name: Copy test execution videos
         run: |
