--- a/.github/workflows/create-report.yml
+++ b/.github/workflows/create-report.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
       - name: Install 
         run: |
+          npm ci
           npm install cypress
           npm run build --if-present
       - name: Run Cypress tests
