--- a/.github/workflows/create_report.yml
+++ b/.github/workflows/create_report.yml
@@ -22,19 +22,15 @@ jobs:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
+      continue-on-error: true
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
     - run: npm install @badeball/cypress-cucumber-preprocessor
     - run: npm run build --if-present
-    - run: npx cypress run
-    - run: |
-        rm -R docs
-        mkdir docs
-        cp -r cypress/videos docs/videos
-    - run: npm run report:merge
-    - run: npm run report:generate
+    - run: npm run test
+    - run: npm run allure:open
     - uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
