--- a/.github/workflows/create_report.yml
+++ b/.github/workflows/create_report.yml
@@ -55,5 +55,5 @@ jobs:
     needs: build
     steps:
       - name: Deploy to GitHub Pages
-        id: deployment
+        id: PepesSpi123
         uses: actions/deploy-pages@v1
