--- a/.github/workflows/create_report.yml
+++ b/.github/workflows/create_report.yml
@@ -30,35 +30,17 @@ jobs:
     - run: npm install @badeball/cypress-cucumber-preprocessor
     - run: npm run build --if-present
     - run: npm run test
-    - uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs
-        user_name: 'github-actions[bot]'
-        user_email: 'github-actions[bot]@users.noreply.github.com'
-    - name: Setup Pages
-      uses: actions/configure-pages@v2
-    - name: Build with Jekyll
-      uses: actions/jekyll-build-pages@v1
-      with:
-        source: ./
-        destination: ./_site
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v1
-
-    - name: Test marketplace action
-      uses: simple-elf/allure-report-action@master
+    - name: Upload artifact allure-report
+      uses: actions/upload-artifact@v1
       if: always()
-      id: allure-report
       with:
-        allure_results: build/allure-results
-        gh_pages: gh-pages
-        allure_report: allure-report
-        allure_history: allure-history
-    - name: Deploy report to Github Pages
+          name: allure-report
+          path: ./allure-report
+    - name: Deploy report
+      uses: JamesIves/github-pages-deploy-action@3.1.0
       if: always()
-      uses: peaceiris/actions-gh-pages@v2
-      env:
-        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: allure-history
+      with:
+          ACCESS_TOKEN: ${{'secrets.ACCESS_TOKEN'}}
+          BRANCH: master # The branch the action should deploy to.
+          FOLDER: allure-report # The folder the action should deploy.
+          TARGET_FOLDER: docs
