--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -38,7 +38,7 @@ jobs:
        - run: npm i npm@latest
        - run: npm i
        - name: run test
-         run: npx run test     
+         run: npm run test     
        
   build:
     runs-on: ubuntu-latest
