--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -42,6 +42,7 @@ jobs:
     - run: npm install @badeball/cypress-cucumber-preprocessor
     - run: npm run build --if-present
     - run: npm run test
+    - run: cp -r cypress/allure-report/index.html cypress/index.html
     
     - name: Checkout
       uses: actions/checkout@v3
