--- a/.github/workflows/create_report.yml
+++ b/.github/workflows/create_report.yml
@@ -28,11 +28,12 @@ jobs:
     - run: npm ci
     - run: npm install @badeball/cypress-cucumber-preprocessor
     - run: npm run build --if-present
-    - run: npx run test
+    - run: npm test
     - run: |
         rm -R docs
         mkdir docs
-        cp -r allure-report/* docs/*
+        cp -r allure-report/* docs
+        
     - uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
